# sweven-labs

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
docs/: README.md  getting-started.md
experiments/: README.md  example_regression.py
models/: README.md
notebooks/: 01_example_eda.ipynb  README.md
scripts/: README.md  process_data.py  train_model.py
src/: README.md  __init__.py
tests/: README.md  test_example.py
